add files for future styles

--- a/src/components/SearchCity.css
+++ b/src/components/SearchCity.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     width: 350px;
     height: auto;
     padding: 40px;
@@ -38,4 +38,4 @@
     border-style: none;
   }
   
-  
+   */
